# JellyFish

./: CMakeLists.txt
build-openglwindow-Desktop_Qt_5_2_0_clang_64bit-Debug/: Makefile  moc_openglwindow.cpp  qrc_openglwindow.cpp
build-openglwindow-Desktop_Qt_5_2_0_clang_64bit-Debug/openglwindow.app/Contents/MacOS/: openglwindow
openglwindow/: main.cpp  openglwindow.cpp  openglwindow.pro  openglwindow.qrc  trianglewindow.cpp  trianglewindow.h
openglwindow/shaders/: shader.frag  shader.vert
practices/: CMakeLists.txt  practice0001.cpp
qpractices/: CMakeLists.txt
